--- a/about-us/index.html
+++ b/about-us/index.html
@@ -525,7 +525,7 @@ Hospitals: Our thoughtful designs contribute to healing environments that suppor
 				</h4>
 			<h2 class="pbmit-element-title">
 				
-					From Vision to<br> Reality in 5 Steps
+					From Vision To<br> Reality in 5 Steps
 				
 				</h2>
 			</div>		<div class="pbmit-element-posts-wrapper  row multi-columns-row">
