--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@ var pbmit_js_variables = {"responsive":null,"ajaxurl":"https:\/\/rakshinteriors.
 				</h4>
 			<h2 class="pbmit-element-title">
 				
-					From Vision to<br> Reality in 5 Steps
+					From Vision To<br> Reality in 5 Steps
 				
 				</h2>
 			</div>		<div class="pbmit-element-posts-wrapper  row multi-columns-row">
